--- a/FileExplorer/App.xaml
+++ b/FileExplorer/App.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FileExplorer"
-    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters">
+    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
+    xmlns:generalViewModels="using:FileExplorer.ViewModels.General">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,6 +19,8 @@
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+
+            <generalViewModels:FileOperationsViewModel x:Key="FileOperations" />
 
         </ResourceDictionary>
     </Application.Resources>
