Started work on table view for a files Using DataGrid to display items and their basic information Created template selector for switching between table and grid view (could not use SemnticZoom) Checking if item can be renamed (for windows if it has not read only attribute)

--- a/FileExplorer/UI/UserControls/DirectoryItemInfoPane.xaml
+++ b/FileExplorer/UI/UserControls/DirectoryItemInfoPane.xaml
@@ -20,7 +20,7 @@
             </Style>
         </Grid.Resources>
 
-        <ScrollViewer>
+        <!--<ScrollViewer>
             <StackPanel Padding="10 5">
 
                 <Image Source="{x:Bind ViewModel.Info.Thumbnail, Mode=OneWay}" Height="100" Style="{StaticResource PanelItem}" />
@@ -50,7 +50,7 @@
                 </StackPanel>
 
             </StackPanel>
-        </ScrollViewer>
+        </ScrollViewer>-->
 
 
         <AppBarButton Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" IsCompact="True"
